--- a/index.html
+++ b/index.html
@@ -900,6 +900,255 @@
                 </div>
             </div>
         </section>
+        <section class="fanju clearfix center">
+            <div class="column-left">
+                <h2 class="video-title">
+                    <img src="src/icon/eagle.gif" alt="">
+                    <a href="#">番剧</a>
+                    <ul class="fanju-type">
+                        <li class="active">放映时间表</li>
+                        <li>新番发布</li>
+                    </ul>
+                    <div class="title-right">
+                        <a class="more" href="#">更多></a>
+                    </div>
+                </h2>
+                <ul class="fanju-list playtime-table clearfix active">
+                    <li class="active">
+                        <h4>周一</h4>
+                        <div>
+                            <a href="#"><img src="src/pic/time-table1.jpg" alt=""></a>
+                        </div>
+                        <a href="#">
+                            <p>口水封神</p>
+                            <b>第24话</b>
+                        </a>
+                        <a href="#">
+                            <p>世界黑暗图鉴</p>
+                            <span>第8话</span>
+                        </a>
+                        <a href="#">
+                            <p>ID-0</p>
+                            <span>第7话</span>
+                        </a>
+                    </li>
+                    <li>
+                        <h4>周二</h4>
+                        <div>
+                            <a href="#"><img src="src/pic/time-table2.jpg" alt=""></a>
+                        </div>
+                        <a href="#">
+                            <p>高校星歌剧</p>
+                            <span>第8话</span>
+                        </a>
+                        <a href="#">
+                            <p>偶像时间 美妙天堂</p>
+                            <span>第8话</span>
+                        </a>
+                        <a href="#">
+                            <p>霸旋陀螺 爆刃战神</p>
+                            <span>第7话</span>
+                        </a>
+                    </li>
+                    <li>
+                        <h4>周三</h4>
+                        <div>
+                            <a href="#"><img src="src/pic/time-table3.jpg" alt=""></a>
+                        </div>
+                        <a href="#">
+                            <p>那年那兔那些事 第四季</p>
+                            <span>第2话</span>
+                        </a>
+                        <a href="#">
+                            <p>美男战国 穿越时空不爱恋</p>
+                            <span>第1话</span>
+                        </a>
+                        <a href="#">
+                            <p>【独家】猜谜王</p>
+                            <span>第1话</span></a>
+                        <a href="#">
+                            <p>画江湖之杯莫停
+                            </p>
+                            <span>第32话</span>
+                        </a>
+                        <a href="#">
+                            <p>夏目友人帐第六季完</p>
+                            <span>第11话</span>
+                        </a>
+                        <a href="#">
+                            <p>口水三国第二季
+                            </p>
+                            <span>第13话</span>
+                        </a>
+                        <a href="#">
+                            <p>王室教师海涅</p>
+                            <span>第8话</span>
+                        </a>
+                    </li>
+                    <li>
+                        <h4>周四</h4>
+                        <div>
+                            <a href="#"><img src="src/pic/time-table4.jpg" alt=""></a>
+                        </div>
+                        <a href="#">
+                            <p>十万个冷笑话 第3季</p>
+                            <span>第40话</span>
+                        </a>
+                        <a href="#">
+                            <p>万古仙穹</p>
+                            <span>第7话</span>
+                        </a>
+                        <a href="#">
+                            <p>少年锦衣卫</p>
+                            <span>第13话</span>
+                        </a>
+                    </li>
+                    <li>
+                        <h4>周五</h4>
+                        <div>
+                            <a href="#"><img src="src/pic/time-table5.jpg" alt=""></a>
+                        </div>
+                        <a href="#">
+                            <p>巴哈姆特之怒 VIRGIN SOUL</p>
+                            <span>第15话</span>
+                        </a>
+                        <a href="#"></p>
+                            <p>动作女主 水果应援团第1话 A PART</p>
+                            <span>第2话</span>
+                        </a>
+                        <a href="#">
+                            <p>【独家】恶搞柴犬</p>
+                            <span>第二季第2话</span>
+                        </a>
+                        <a href="#">
+                            <p>阿拉德：宿命之门
+                            </p>
+                            <span>第13话</span>
+                        </a>
+                        <a href="#">
+                            <p>食神魂</p>
+                            <span>第8话</span>
+                        </a>
+                        <a href="#">
+                            <p>剑风传奇第二季</p>
+                            <span>第12话</span>
+                        </a>
+                        <a href="#">
+                            <p>正确的KADO</p>
+                            <span>第12话</span>
+                        </a>
+                    </li>
+                    <li>
+                        <h4>周六</h4>
+                        <div>
+                            <a href="#"><img src="src/pic/time-table6.jpg" alt=""></a>
+                        </div>
+                        <a href="#">
+                            <p>信长的忍者～伊势·金崎篇～</p>
+                            <span>第7话</span>
+                        </a>
+                    </li>
+                    <li>
+                        <h4>周日</h4>
+                        <div>
+                            <a href="#"><img src="src/pic/time-table7.png" alt=""></a>
+                        </div>
+                        <a href="#">
+                            <p>【A站独家】战姬绝唱SymphogearAXZ第3话 A PART</p>
+                            <span>第3话</span>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="fanju-list newcomicpublish clearfix">
+                    <li>
+                        <a href="#"><img src="src/pic/newcomic1.png" alt=""></a>
+                        <p>
+                            <a href="#">
+                                <p>【A站独家】战姬绝唱SymphogearAXZ第3话 A PART</p>
+                            </a>
+                        </p>
+                        <span class="active">第三话</span>
+                        <i>5006人在追</i>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/newcomic2.jpg" alt=""></a>
+                        <p>
+                            <a href="#">
+                                <p>巴哈姆特之怒 VIRGIN SOUL第15话 A PART</p>
+                            </a>
+                        </p>
+                        <span>第15话</span>
+                        <i>6554人在追</i>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/newcomic3.jpg" alt=""></a>
+                        <p>
+                            <a href="#">
+                                <p>动作女主 水果应援团第1话 A PART</p>
+                            </a>
+                        </p>
+                        <span>第2话</span>
+                        <i>1617人在追</i>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/newcomic4.png" alt=""></p>
+                        </a>
+                        <p>
+                            <a href="#">
+                                <p>【A站独家】恶搞柴犬</a>
+                            </p>
+                            <span>第二季第2话</span>
+                            <i>9464人在追</i>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/newcomic5.jpg" alt=""></a>
+                        <p>
+                            <a href="#">
+                                <p>阿拉德：宿命之门</p>
+                            </a>
+                        </p>
+                        <span>第13话</span>
+                        <i>5787人在追</i>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/newcomic6.jpg" alt=""></a>
+                        <p>
+                            <a href="#">
+                                <p>那年那兔那些事儿</p>
+                            </a>
+                        </p>
+                        <span>第四季第2话</span>
+                        <i>3428人在追</i>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/newcomic7.jpg" alt=""></a>
+                        <p>
+                            <a href="#">
+                                <p>十万个冷笑话</p>
+                            </a>
+                        </p>
+                        <span>第三季第38话</span>
+                        <i>17096人在追</i>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/newcomic8.png" alt=""></a>
+                        <p>
+                            <a href="#">
+                                <p>美男战国 穿越时空不爱恋第1话</p>
+                            </a>
+                        </p>
+                        <span>第1话</span>
+                        <i>1155人在追</i>
+                    </li>
+                </ul>
+            </div>
+            <div class="anli column-right">
+                <h2>本季安利</h2>
+                <a href="#"><img src="src/pic/anli1.png" alt=""></a>
+                <a href="#"><img src="src/pic/anli2.png" alt=""></a>
+                <a href="#"><img src="src/pic/anli3.png" alt=""></a>
+            </div>
+        </section>
         <section class="game center clearfix">
             <div class="column-left">
                 <h2 class="video-title">
