add search localstorage

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
                     <input id="search-input" type="text" name="search" placeholder="steam销量周榜第27期">
                     <button class="iconfont icon-search"></button>
                     <div id="hot-search">
+                        <div id="history-part">
+                            <div class="history-head clearfix">
+                                <div class="history">历史记录</div>
+                                <div id="clear-history">清除历史</div>
+                            </div>
+                            <ul id="history-content" class="clearfix">
+                            </ul>
+                        </div>
                         <div class="today-hot-search">
                             <h4>今日热搜</h4>
                             <ul>
