--- a/index.html
+++ b/index.html
@@ -2411,6 +2411,7 @@
                 </div>
             </div>
         </section>
+        <div id="go-top">↑</div>
     </main>
     <footer>
         <div class="footer-wrap center">
