--- a/index.html
+++ b/index.html
@@ -2411,7 +2411,7 @@
                 </div>
             </div>
         </section>
-        <div id="go-top">↑</div>
+
     </main>
     <footer>
         <div class="footer-wrap center">
@@ -2481,6 +2481,7 @@
             <p>本站不提供任何视听上传服务，所有内容均来自视频分享站点所提供的公开引用资源。Copyright © 2007-2017 AcFun. 保留所有权利</p>
         </div>
     </footer>
+    <div id="go-top"></div>
 </body>
 
 </html>
