--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <!-- <link rel="stylesheet" href="src/acfun.css"> -->
     <link rel="stylesheet" href="src/font/iconfont.css">
     <title>AcFun弹幕视频网 - 认真你就输啦 (・ω・)ノ- ( ゜- ゜)つロ</title>
-    <script src="dist/bundle.js" defer></script>
 </head>
 
 <body>
@@ -2482,6 +2481,7 @@
         </div>
     </footer>
     <div id="go-top"></div>
+    <script src="dist/bundle.js"></script>
 </body>
 
 </html>
